refactor: adjust entripoint

--- a/Dockerfiles/16.0-alpine3.18/dev/Dockerfile
+++ b/Dockerfiles/16.0-alpine3.18/dev/Dockerfile
@@ -161,7 +161,10 @@ RUN mkdir -p "$PGDATA" && chown -R postgres:postgres "$PGDATA" && chmod 1777 "$P
 VOLUME /var/lib/postgresql/data
 
 COPY docker-entrypoint.sh /usr/local/bin/
-ENTRYPOINT ["docker-entrypoint.sh"]
+
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 
 STOPSIGNAL SIGINT
 
