--- a/.github/workflows/docker-hub-build-and-push.yml
+++ b/.github/workflows/docker-hub-build-and-push.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set env
         run: |
           echo "POSTGRESQL_VERSION=$(cut -d '/' -f 2 <<< "${GITHUB_REF#refs/*/}")" >> $GITHUB_ENV
-          echo "IMAGE_NAME=$(cut -d '/' -f 1 <<< "${GITHUB_REF#refs/*/}")" >> $GITHUB_ENV
+          echo "IMAGE_NAME=postgresql" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
