--- a/Dockerfiles/16.0-alpine3.18/base/Dockerfile
+++ b/Dockerfiles/16.0-alpine3.18/base/Dockerfile
@@ -161,9 +161,14 @@ RUN mkdir -p "$PGDATA" && chown -R postgres:postgres "$PGDATA" && chmod 1777 "$P
 VOLUME /var/lib/postgresql/data
 
 COPY docker-entrypoint.sh /usr/local/bin/
-ENTRYPOINT ["docker-entrypoint.sh"]
+COPY postgresql.conf /usr/local/share/postgresql/postgresql.conf.sample
+
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 
 STOPSIGNAL SIGINT
 
 EXPOSE 5432
+
 CMD ["postgres"]
