--- a/Dockerfiles/16.0-alpine3.18/prod/postgresql.conf
+++ b/Dockerfiles/16.0-alpine3.18/prod/postgresql.conf
@@ -62,10 +62,10 @@ listen_addresses = '*'
                                         # defaults to 'localhost'; use '*' for all
                                         # (change requires restart)
 #port = 5432                            # (change requires restart)
-max_connections = 100                   # (change requires restart)
+#max_connections = 100                  # (change requires restart)
 #reserved_connections = 0               # (change requires restart)
 #superuser_reserved_connections = 3     # (change requires restart)
-#unix_socket_directories = '/var/run/postgresql' # comma-separated list of directories
+#unix_socket_directories = '/tmp'       # comma-separated list of directories
                                         # (change requires restart)
 #unix_socket_group = ''                 # (change requires restart)
 #unix_socket_permissions = 0777         # begin with 0 to use octal notation
@@ -127,7 +127,7 @@ max_connections = 100                   # (change requires restart)
 
 # - Memory -
 
-shared_buffers = 128MB                  # min 128kB
+#shared_buffers = 128MB                 # min 128kB
                                         # (change requires restart)
 #huge_pages = try                       # on, off, or try
                                         # (change requires restart)
@@ -150,7 +150,7 @@ shared_buffers = 128MB                  # min 128kB
                                         #   sysv
                                         #   windows
                                         # (change requires restart)
-dynamic_shared_memory_type = posix      # the default is usually the first option
+#dynamic_shared_memory_type = posix     # the default is usually the first option
                                         # supported by the operating system:
                                         #   posix
                                         #   sysv
@@ -185,7 +185,7 @@ dynamic_shared_memory_type = posix      # the default is usually the first optio
 #bgwriter_delay = 200ms                 # 10-10000ms between rounds
 #bgwriter_lru_maxpages = 100            # max buffers written/round, 0 disables
 #bgwriter_lru_multiplier = 2.0          # 0-10.0 multiplier on buffers scanned/round
-#bgwriter_flush_after = 512kB           # measured in pages, 0 disables
+#bgwriter_flush_after = 0               # measured in pages, 0 disables
 
 # - Asynchronous Behavior -
 
@@ -242,10 +242,10 @@ dynamic_shared_memory_type = posix      # the default is usually the first optio
 
 #checkpoint_timeout = 5min              # range 30s-1d
 #checkpoint_completion_target = 0.9     # checkpoint target duration, 0.0 - 1.0
-#checkpoint_flush_after = 256kB         # measured in pages, 0 disables
+#checkpoint_flush_after = 0             # measured in pages, 0 disables
 #checkpoint_warning = 30s               # 0 disables
-max_wal_size = 1GB
-min_wal_size = 80MB
+#max_wal_size = 1GB
+#min_wal_size = 80MB
 
 # - Prefetching during recovery -
 
@@ -447,26 +447,22 @@ min_wal_size = 80MB
 
 # - Where to Log -
 
-log_destination = 'stderr'
-                                        # Valid values are combinations of
+#log_destination = 'stderr'             # Valid values are combinations of
                                         # stderr, csvlog, jsonlog, syslog, and
                                         # eventlog, depending on platform.
                                         # csvlog and jsonlog require
                                         # logging_collector to be on.
 
 # This is used when logging to stderr:
-#logging_collector = off
-                                        # Enable capturing of stderr, jsonlog,
+#logging_collector = off                # Enable capturing of stderr, jsonlog,
                                         # and csvlog into log files. Required
                                         # to be on for csvlogs and jsonlogs.
                                         # (change requires restart)
 
 # These are only used if logging_collector is on:
-#log_directory = '/dev/'
-                                        # directory where log files are written,
+#log_directory = 'log'                  # directory where log files are written,
                                         # can be absolute or relative to PGDATA
-#log_filename = 'stdout'
-                                        # log file name pattern,
+#log_filename = 'postgresql-%Y-%m-%d_%H%M%S.log'        # log file name pattern,
                                         # can include strftime() escapes
 #log_file_mode = 0600                   # creation mode for log files,
                                         # begin with 0 to use octal notation
@@ -524,8 +520,7 @@ log_destination = 'stderr'
                                         #   fatal
                                         #   panic (effectively off)
 
-log_min_duration_statement = 500
-                                        # -1 is disabled, 0 logs all statements
+#log_min_duration_statement = -1        # -1 is disabled, 0 logs all statements
                                         # and their durations, > 0 logs only
                                         # statements running at least this number
                                         # of milliseconds
@@ -605,7 +600,7 @@ log_min_duration_statement = 500
 #log_temp_files = -1                    # log temporary files equal or larger
                                         # than the specified size in kilobytes;
                                         # -1 disables, 0 logs all temp files
-log_timezone = 'America/Sao_Paulo'
+#log_timezone = 'GMT'
 
 # - Process Title -
 
@@ -717,9 +712,9 @@ log_timezone = 'America/Sao_Paulo'
 
 # - Locale and Formatting -
 
-datestyle = 'iso, mdy'
+#datestyle = 'iso, mdy'
 #intervalstyle = 'postgres'
-timezone = 'America/Sao_Paulo'
+#timezone = 'GMT'
 #timezone_abbreviations = 'Default'     # Select the set of available time zone
                                         # abbreviations.  Currently, there are
                                         #   Default
@@ -733,17 +728,17 @@ timezone = 'America/Sao_Paulo'
                                         # encoding
 
 # These settings are initialized by initdb, but they can be changed.
-lc_messages = 'en_US.utf8'              # locale for system error message
+#lc_messages = 'C'                      # locale for system error message
                                         # strings
-lc_monetary = 'en_US.utf8'              # locale for monetary formatting
-lc_numeric = 'en_US.utf8'               # locale for number formatting
-lc_time = 'en_US.utf8'                  # locale for time formatting
+#lc_monetary = 'C'                      # locale for monetary formatting
+#lc_numeric = 'C'                       # locale for number formatting
+#lc_time = 'C'                          # locale for time formatting
 
 #icu_validation_level = warning         # report ICU locale validation
                                         # errors at the given level
 
 # default configuration for text search
-default_text_search_config = 'pg_catalog.english'
+#default_text_search_config = 'pg_catalog.simple'
 
 # - Shared Library Preloading -
 
@@ -755,8 +750,6 @@ default_text_search_config = 'pg_catalog.english'
 # - Other Defaults -
 
 #dynamic_library_path = '$libdir'
-#extension_destdir = ''                 # prepend path when loading extensions
-                                        # and shared objects (added by Debian)
 #gin_fuzzy_search_limit = 0
 
 
